--- a/less/navigation.less
+++ b/less/navigation.less
@@ -21,3 +21,14 @@ nav {
         }
     }
 }
+
+nav.fixednav {
+    background-color: @ebony-clay;
+    position: fixed;
+    width: 100%;
+    opacity: .9;
+    top: 0;
+    a {
+        color: white;
+    }
+}
